// parent-project/child1/build.gradle

plugins {
    id 'java'
}

group = 'com.lawrence.javassist'
version = '1.0'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    // 添加子项目特有的依赖
    implementation 'org.javassist:javassist:3.27.0-GA'
}
jar {
    // archivesBaseName = "${rootProject.name}"
    //定义包名
    println("-->"+archiveBaseName)
    println(getArchiveBaseName().get())
    println(getArchiveVersion().get())
    println("-->"+archiveBaseName)
    archivesBaseName = "${project.name}"
    println("archiveVersion:"+archiveVersion.getOrNull())
    archiveVersion = "${archiveVersion.getOrNull()}_0.01"
    archiveClassifier = "SNAPSHOT"
    manifest {
        //Manifest-Version: 1.0
        //Can-Redefine-Classes: true
        //Can-Retransform-Classes: true
        //Premain-Class: PreMainTraceAgent
        attributes "Manifest-Version": 1.0,
                "Can-Redefine-Classes": true,
                "Can-Retransform-Classes": true,
                'Premain-Class': 'com.lawrence.AttachMain'
    }
    configurations.implementation.setCanBeResolved(true)
    from { configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) } }
}